--- a/source/stylesheets/_type.scss
+++ b/source/stylesheets/_type.scss
@@ -70,9 +70,6 @@ strong { font-weight: bold; }
 a {
   color: $link_color;
 
-  &:visited {
-    color: $link_color_visited;
-  }
   &:hover {
     color: $link_color_hover;
   }
@@ -117,7 +114,7 @@ ul { list-style: disc inside; }
 //
 // Header
 //
-.container > header {
+body > header {
   font-weight: 300;
 
   h1 {
@@ -139,7 +136,7 @@ ul { list-style: disc inside; }
       text-transform: uppercase;
 
       a {
-        color: inherit;
+        color: $header_nav_color;
         text-decoration: none;
       }
     }
